--- a/src/views/login/Password.scss
+++ b/src/views/login/Password.scss
@@ -1,9 +1,26 @@
-@import '../../styles/variables.scss';
+@import 'styles/variables.scss';
+@import 'styles/themes/mixins.scss';
 
 .st-Password {
-	max-width: 480px;
-	padding: 20px;
-	margin: 40px auto;
 	display: flex;
 	flex-direction: column;
+	justify-content: center;
+	width: $story-preview-width-medium;
+	padding: 36px;
+	margin: 0 auto;
+	border-radius: 6px;
+	border: 1px solid;
+	@include theme-aware('border-color', 'G100');
+
+	@media (max-width: $breakpoint-sm) {
+		width: $story-preview-width-small;
+	}
+
+	h4 {
+		font-family: $font-merriweather;
+		font-weight: 900;
+		font-size: 24px;
+		margin-bottom: 24px;
+		@include theme-aware('color', 'G900');
+	}
 }
