FTR-2: Archived stories implementatio

--- a/src/views/stories/Story.scss
+++ b/src/views/stories/Story.scss
@@ -108,6 +108,14 @@
 		@include theme-aware('color', 'G400');
 	}
 
+	&-placeholder {
+		svg {
+			path {
+				@include theme-aware('fill', 'G400');
+			}
+		}
+	}
+
 	.st-TextViewer {
 		width: 100%;
 	}
