--- a/src/views/user/stories/StoryList.scss
+++ b/src/views/user/stories/StoryList.scss
@@ -1,12 +1,20 @@
 @import 'styles/variables.scss';
 @import 'styles/themes/mixins.scss';
 
-.st-MyStories {
+.st-StoryList {
 	display: flex;
 	flex-direction: column;
 
 	> span {
 		font-weight: 600;
+		text-transform: uppercase;
+		margin-bottom: 8px;
 		@include theme-aware('color', 'G500');
+	}
+
+	&-pagination {
+		display: flex;
+		justify-content: center;
+		margin: 16px 0;
 	}
 }
