--- a/src/views/login/Password.scss
+++ b/src/views/login/Password.scss
@@ -13,7 +13,8 @@
 	@include theme-aware('border-color', 'G100');
 
 	@media (max-width: $breakpoint-sm) {
-		width: $story-preview-width-small;
+		width: 100%;
+		height: calc(100% - 60px);
 	}
 
 	h4 {
