--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -8,7 +8,7 @@ $color-gold-64: #deb368;
 $color-gold-48: #c98f2c;
 $color-gold-36: #976b21;
 $color-gold-24: #644816;
-$color-gold-16: #2e2a24;
+$color-gold-16: #352f27;
 $color-gold-12: #32240b;
 
 $color-grey-100: #ffffff;
