FTR-3: added notification page

--- a/src/components/nav/MobileNav.scss
+++ b/src/components/nav/MobileNav.scss
@@ -9,6 +9,7 @@
 	z-index: 1030;
 	width: 100%;
 	justify-content: space-around;
+	align-items: center;
 	padding: 6px;
 	@include theme-aware('background-color', 'B100');
 	@include theme-aware('box-shadow', 'card-shadow');
