--- a/src/components/notifications/Notifications.scss
+++ b/src/components/notifications/Notifications.scss
@@ -9,7 +9,17 @@
 
 	.dropdown-menu {
 		@include theme-aware('background', 'B100');
-		padding: 0 8px;
+		padding: 8px 6px;
+	}
+
+	&-notifications {
+		padding: 14px;
+		text-transform: uppercase;
+	}
+
+	&-page {
+		max-width: $story-preview-width-medium;
+		margin: 0 auto;
 	}
 
 	&-bell {
@@ -30,11 +40,9 @@
 		.badge {
 			padding: 4px 6px;
 			border-radius: 16px;
-			// border: 4px solid;
-			// @include theme-aware('border-color', 'B200');
 			position: absolute !important;
-			margin-top: -10px;
-			margin-left: -6px;
+			top: -12px !important;
+			right: -12px;
 		}
 
 		&:hover {
