--- a/src/views/stories/StoryTabs.scss
+++ b/src/views/stories/StoryTabs.scss
@@ -14,9 +14,7 @@
 			@include tab-link;
 		}
 
-		.st-SavedStories,
-		.st-DraftStories,
-		.st-MyStories {
+		.st-StoryList {
 			> span {
 				display: none;
 			}
