NT: Typography component rework

--- a/src/components/widgets/page-placeholder/PagePlaceholder.scss
+++ b/src/components/widgets/page-placeholder/PagePlaceholder.scss
@@ -9,7 +9,7 @@
 		margin-bottom: 36px;
 	}
 
-	.placeholder-grey-medium {
+	.st-Typography-action1 {
 		margin-top: 16px;
 		max-width: 356px;
 		text-align: center;
