--- a/src/ErrorPage.scss
+++ b/src/ErrorPage.scss
@@ -11,7 +11,7 @@
 		margin-bottom: 36px;
 	}
 
-	.placeholder-grey-medium {
+	.st-Typography-action1 {
 		margin-top: 16px;
 		max-width: 356px;
 		text-align: center;
