--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -47,6 +47,7 @@ $breakpoint-sm: 576px;
 $box-shadow-light: 2px 2px 12px rgba(35, 31, 26, 0.08);
 $box-shadow-drop: 2px 2px 12px rgba(35, 31, 26, 0.24);
 $box-shadow-invert: 2px -2px 12px rgba(35, 31, 26, 0.08);
+$box-shadow-default: 2px 2px 12px rgba(35, 31, 26, 0.04);
 $box-shadow-card-light: 2px 2px 12px rgba(35, 31, 26, 0.16);
 $box-shadow-card-dark: 2px 2px 12px rgba(35, 31, 26, 0.99);
 
