--- a/src/components/widgets/checkbox/Checkbox.scss
+++ b/src/components/widgets/checkbox/Checkbox.scss
@@ -4,20 +4,18 @@
 .st-Checkbox {
 	margin: 20px 0;
 
+	input {
+		border-radius: 2px;
+		width: 20px;
+		height: 20px;
+		border: 1px solid;
+		@include theme-aware('border-color', 'T600');
+	}
+
 	label {
 		font-size: 14px;
 		font-weight: 400;
 		@include theme-aware('color', 'G600');
 		cursor: pointer;
-
-		&:before,
-		&:after {
-			border-radius: 2px;
-			top: 0;
-			width: 20px;
-			height: 20px;
-			border: 1px solid;
-			@include theme-aware('border-color', 'T600');
-		}
 	}
 }
