--- a/src/components/guildatar/Guildatar.scss
+++ b/src/components/guildatar/Guildatar.scss
@@ -2,7 +2,8 @@
 
 .st-Guildatar {
 	position: relative;
-	min-height: 300px;
+	width: 200px;
+	min-height: 230px;
 
 	&-character {
 		position: absolute;
@@ -10,6 +11,13 @@
 		left: 0;
 		width: 202px;
 		height: 201px;
+
+		.st-Image {
+			&-container {
+				position: unset;
+				height: auto;
+			}
+		}
 
 		&-helmet,
 		&-head,
@@ -25,6 +33,13 @@
 			height: 150px;
 			top: -8px;
 			left: 50px;
+
+			.st-Image {
+				&-container {
+					position: unset;
+					height: auto;
+				}
+			}
 		}
 
 		&-head {
