FTR-7: guildatar, marketplace, userItems additional work

--- a/src/components/marketplace/MarketplaceDialog.scss
+++ b/src/components/marketplace/MarketplaceDialog.scss
@@ -13,6 +13,13 @@
 		min-height: 230px;
 	}
 
+	.st-Typography {
+		&-tertiary {
+			margin-bottom: 8px;
+			font-size: 12px;
+		}
+	}
+
 	&-dialog {
 		.modal {
 			&-footer {
