--- a/src/components/widgets/typography/Typography.scss
+++ b/src/components/widgets/typography/Typography.scss
@@ -2,6 +2,8 @@
 @import 'styles/themes/mixins.scss';
 
 .st-Typography {
+	word-break: break-word;
+
 	&-merriweather {
 		font-family: $font-merriweather;
 	}
