--- a/src/components/marketplace/MarketplaceItem.scss
+++ b/src/components/marketplace/MarketplaceItem.scss
@@ -12,16 +12,23 @@
 	margin: 0 16px 16px 0;
 	border-radius: 6px;
 	padding: 16px;
+	align-self: flex-start;
 	@include theme-aware('background-color', 'B100');
 
 	&:hover {
 		cursor: pointer;
+		@include theme-aware('background-color', 'B300');
 	}
 
 	&.active {
 		border: 1px solid;
 		@include theme-aware('background-color', 'B200');
 		@include theme-aware('border-color', 'G100');
+		box-shadow: none;
+
+		&:hover {
+			cursor: initial;
+		}
 	}
 
 	.st-Image {
