--- a/src/views/marketplace/Marketplace.scss
+++ b/src/views/marketplace/Marketplace.scss
@@ -3,6 +3,7 @@
 .st-Marketplace {
 	display: flex;
 	flex-direction: column;
+	margin: 0 14px;
 	@media (max-width: $breakpoint-m) {
 		max-width: $story-preview-width-medium;
 		margin: 12px auto;
@@ -35,7 +36,7 @@
 
 	&-market {
 		display: flex;
-		margin-top: 32px;
+		margin-top: 24px;
 
 		@media (max-width: $breakpoint-m) {
 			flex-direction: column;
@@ -43,6 +44,8 @@
 
 		&-categories {
 			flex-basis: 20%;
+
+			margin-right: 36px;
 
 			@media (max-width: $breakpoint-m) {
 				flex-basis: 100%;
@@ -53,6 +56,7 @@
 			display: flex;
 			flex-direction: column;
 			flex-basis: 80%;
+			align-content: space-between;
 
 			&-loadmore {
 				display: flex;
@@ -65,6 +69,7 @@
 
 			@media (max-width: $breakpoint-m) {
 				flex-basis: 100%;
+				// flex-direction: row;
 				width: 100%;
 
 				.st-Typography-bold {
