--- a/src/views/marketplace/Marketplace.scss
+++ b/src/views/marketplace/Marketplace.scss
@@ -32,7 +32,7 @@
 
 	&-market {
 		display: flex;
-		margin-top: 32px;
+		margin-top: 24px;
 
 		@media (max-width: $breakpoint-m) {
 			flex-direction: column;
@@ -41,6 +41,8 @@
 
 		&-categories {
 			flex-basis: 20%;
+
+			margin-right: 36px;
 
 			@media (max-width: $breakpoint-m) {
 				flex-basis: 100%;
@@ -51,6 +53,7 @@
 			display: flex;
 			flex-direction: column;
 			flex-basis: 80%;
+			align-content: space-between;
 
 			&-loadmore {
 				display: flex;
@@ -67,6 +70,7 @@
 
 			@media (max-width: $breakpoint-m) {
 				flex-basis: 100%;
+				// flex-direction: row;
 				width: 100%;
 
 				.st-Typography-bold {
