--- a/src/views/stories/StoryItem.scss
+++ b/src/views/stories/StoryItem.scss
@@ -38,7 +38,8 @@
 	}
 
 	@media (max-width: $breakpoint-sm) {
-		width: $story-preview-width-small;
+		max-width: $story-preview-width-small;
+		width: 100%;
 	}
 
 	&-author {
