--- a/src/components/nav/DesktopNav.scss
+++ b/src/components/nav/DesktopNav.scss
@@ -7,12 +7,18 @@
 	padding: 0 !important;
 	margin: 24px 0;
 	position: sticky !important;
-	z-index: 1;
+	z-index: 5;
 	top: 0;
 	@include theme-aware('background', 'B200');
 
 	.st-Loader {
 		height: 100vh;
+	}
+
+	.container-fluid {
+		@media (max-width: $breakpoint-m) {
+			padding: 0;
+		}
 	}
 
 	@media (max-width: $breakpoint-m) {
@@ -26,24 +32,6 @@
 	@media (max-width: $breakpoint-sm) {
 		max-width: $story-preview-width-small;
 		margin: 0 auto;
-
-		&:before,
-		&:after {
-			content: '';
-			top: 0;
-			position: absolute;
-			width: 10px;
-			height: 100%;
-			@include theme-aware('background', 'B200');
-		}
-
-		&:before {
-			left: -10px;
-		}
-
-		&:after {
-			right: -10px;
-		}
 	}
 
 	.st-StoryPicker {
@@ -113,7 +101,24 @@
 				}
 			}
 
+			&-icons {
+				display: flex;
+				align-items: center;
+
+				margin-right: 24px;
+
+				.st-Icon {
+					margin: 8px;
+				}
+			}
+
 			.st-DropdownButton {
+				margin-right: 24px;
+
+				@media (max-width: $breakpoint-sm) {
+					margin-right: 0;
+				}
+
 				> button {
 					padding: 0;
 					border-radius: 50%;
