--- a/src/components/widgets/image/Image.scss
+++ b/src/components/widgets/image/Image.scss
@@ -37,5 +37,12 @@
 		width: 100%;
 		height: 100%;
 		@include theme-aware('border', 'G100');
+		@include theme-aware('background-color', 'B300');
+
+		svg {
+			path {
+				@include theme-aware('fill', 'B400');
+			}
+		}
 	}
 }
