--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -78,3 +78,8 @@ $story-preview-width-medium: 480px;
 $story-preview-width-small: 320px;
 $story-preview-height: 480px;
 $story-preview-shadow: $box-shadow-light;
+
+// MARKETPLACE
+$market-item-width-large: 180px;
+$market-item-width-small: 160px;
+$market-item-height: 240px;
