--- a/src/views/guildatar/GuildatarContainer.scss
+++ b/src/views/guildatar/GuildatarContainer.scss
@@ -11,7 +11,7 @@
 		align-items: center;
 		margin-bottom: 32px;
 
-		@media (max-width: $breakpoint-sm) {
+		@media (max-width: $breakpoint-m) {
 			flex-direction: column;
 		}
 
@@ -19,14 +19,14 @@
 			display: flex;
 			flex-direction: column;
 
-			@media (max-width: $breakpoint-sm) {
+			@media (max-width: $breakpoint-m) {
 				order: 3;
 				width: 100%;
 			}
 		}
 
 		&-edit {
-			@media (max-width: $breakpoint-sm) {
+			@media (max-width: $breakpoint-m) {
 				order: 2;
 				margin-bottom: 16px;
 			}
@@ -35,7 +35,7 @@
 		&-actions {
 			display: flex;
 
-			@media (max-width: $breakpoint-sm) {
+			@media (max-width: $breakpoint-m) {
 				order: 1;
 				margin-bottom: 16px;
 			}
@@ -52,7 +52,7 @@
 		display: flex;
 		width: 100%;
 
-		@media (max-width: $breakpoint-sm) {
+		@media (max-width: $breakpoint-m) {
 			flex-direction: column;
 		}
 
@@ -74,7 +74,7 @@
 					transform: scale(1.2);
 				}
 
-				@media (max-width: $breakpoint-sm) {
+				@media (max-width: $breakpoint-m) {
 					max-width: unset;
 				}
 			}
@@ -86,7 +86,7 @@
 				width: 100%;
 				max-width: $story-preview-width-small;
 
-				@media (max-width: $breakpoint-sm) {
+				@media (max-width: $breakpoint-m) {
 					max-width: unset;
 				}
 
@@ -102,6 +102,14 @@
 			display: flex;
 			flex-direction: column;
 			flex-basis: 60%;
+
+			.st-HorizontalList {
+				&-children {
+					@media (max-width: $breakpoint-sm) {
+						justify-content: space-evenly;
+					}
+				}
+			}
 
 			&-load_more {
 				display: flex;
