--- a/src/components/nav/MobileNav.scss
+++ b/src/components/nav/MobileNav.scss
@@ -19,6 +19,22 @@
 		margin: 0 auto;
 	}
 
+	.navbar {
+		width: 100%;
+
+		.nav-item {
+			flex: 1;
+
+			.st-IconButton {
+				width: 100%;
+			}
+
+			&:first-child {
+				margin-right: 12px;
+			}
+		}
+	}
+
 	&.nav {
 		padding: 0 20px;
 
