--- a/src/views/guildatar/GuildatarContainer.scss
+++ b/src/views/guildatar/GuildatarContainer.scss
@@ -57,8 +57,13 @@
 		display: flex;
 		width: 100%;
 
+		> div {
+			flex: 1;
+		}
+
 		@media (max-width: $breakpoint-m) {
 			flex-direction: column;
+			flex: unset;
 		}
 
 		&-avatar {
@@ -113,17 +118,14 @@
 			display: flex;
 			flex-direction: column;
 
-			.st-HorizontalList {
-				&-children {
-					@media (max-width: $breakpoint-sm) {
-						justify-content: space-evenly;
-					}
-				}
-			}
-
 			&-load_more {
 				display: flex;
 				flex-wrap: wrap;
+				margin-top: 12px;
+
+				@media (max-width: $breakpoint-sm) {
+					justify-content: space-evenly;
+				}
 			}
 		}
 	}
