--- a/src/views/stories/StoryItem.scss
+++ b/src/views/stories/StoryItem.scss
@@ -202,6 +202,9 @@
 			}
 
 			&-left {
+				display: flex;
+				flex-wrap: wrap;
+				width: calc(100% - 60px);
 				span {
 					margin-right: 24px;
 
@@ -248,6 +251,7 @@
 		display: flex;
 		flex-direction: column;
 		height: 100%;
+		justify-content: space-between;
 
 		&-posted {
 			display: flex;
