--- a/src/views/dashboard/widgets/RecentViews.scss
+++ b/src/views/dashboard/widgets/RecentViews.scss
@@ -1,6 +1,7 @@
 @import 'styles/variables.scss';
 @import 'styles/themes/mixins.scss';
 
-.st-Icon {
+.st-RecentViews {
 	display: flex;
+	flex-direction: column;
 }
