--- a/src/views/dashboard/Dashboard.scss
+++ b/src/views/dashboard/Dashboard.scss
@@ -2,11 +2,31 @@
 @import 'styles/themes/mixins.scss';
 
 .st-Dashboard {
+	margin-bottom: 16px;
+
 	&-content {
 		display: flex;
+		justify-content: space-between;
+		margin-top: 24px;
+
+		@media (max-width: $breakpoint-m) {
+			flex-direction: column;
+		}
 
 		> div {
 			flex: 1 1;
+			max-width: $story-preview-width-medium;
+			width: 100%;
+			margin-right: 16px;
+
+			&:nth-child() {
+				margin-right: 0;
+			}
+
+			@media (max-width: $breakpoint-m) {
+				margin-bottom: 16px;
+				margin-right: 0;
+			}
 		}
 	}
 }
