FTR-10: added placeholders for no values in Dashboard

--- a/src/views/dashboard/widgets/RecentViews.scss
+++ b/src/views/dashboard/widgets/RecentViews.scss
@@ -4,4 +4,10 @@
 .st-RecentViews {
 	display: flex;
 	flex-direction: column;
+
+	&-no-items {
+		display: flex;
+		align-items: center;
+		justify-content: center;
+	}
 }
