--- a/src/views/dashboard/widgets/RecentWork.scss
+++ b/src/views/dashboard/widgets/RecentWork.scss
@@ -6,6 +6,12 @@
 	flex-direction: column;
 	cursor: pointer;
 
+	&-no-items {
+		display: flex;
+		align-items: center;
+		justify-content: center;
+	}
+
 	&-item {
 		display: flex;
 		flex-direction: column;
